--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,12 @@
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       
                     <div class="navbar-nav ms-auto">
-                      <!-- <a class="nav-link active" aria-current="page" href="../src/about.html">about</a>-->
-                      <!--<a class="nav-link" href="../src/blog.html">blog</a> -->
+                      <a class="nav-link active" aria-current="page" href="../src/about.html">about</a>
+                      <a class="nav-link" href="../src/blog.html">blog</a>
                       <a class="nav-link" href="../src/resources.html">resources</a>
-                      <a class="nav-link" href="../src/donate.html">donate</a>
-                      <!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">name</a>
-                      <a class="nav-link" href="../src/login.html">login/register</a>-->
+                      <a class="nav-link" href="../src/feedback.html">feedback</a>
+                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">name</a>
+                      <a class="nav-link" href="../src/login.html">login/register</a>
                     </div>
                   </div>
                 </div>
@@ -49,7 +49,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ab officiis pariatur possimus non minima eum illo sint, libero consectetur nam iusto corrupti quas ad expedita excepturi enim culpa ipsa.
 
                     </p>
-                    <!--<button class="btn btn-primary px-5 py-2">become a member</button>-->
+                    <button class="btn btn-primary px-5 py-2">become a member</button>
                 </div>
                 <div class="col-md-3 col-sm-12 ">
                         <img class="img-responsive" src="../assets/resources.png" width=400 alt="social">
@@ -146,7 +146,7 @@
             <p class="pt-4 text-light">Copyright <span>Sincerely World</span> 2021</p>
           </div>
 
-          <!--<div class="col-md-5 p-0">
+          <div class="col-md-5 p-0">
             <h4 class="text-light">subscribe to our newsletter</h4>
             <form class="form-inline">
               <div class="col pl-0">
@@ -158,7 +158,7 @@
                     </div>
                   </div>
                 </div>
-              </div>-->
+              </div>
 
             </form>
           </div>
