--- a/src/resources.html
+++ b/src/resources.html
@@ -65,37 +65,29 @@
                     <thead class="thead-light">
                       <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Organization</th>
-                        <th scope="co">Services</th>
-                        <th scope="co">Demographic Target</th>
                         <th scope="col">State</th>
-                        <th scope="co">Contact</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
                         <th scope="row">1</th>
-                        <td><a href="http://oca-nj.com/">Organization of Chinese Americans - NJ Chapter</a></td>
-                        <td>Advocacy, Education</td>
-                        <td>East Asian</td>
-                        <td>NJ</td>
-                        <td><a href="mailto: oca.njedcom@gmail.com">oca.njedcom@gmail.com</a></td>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
                       </tr>
                       <tr>
                         <th scope="row">2</th>
-                        <td><a href="https://www.naminj.org/programs/multicultural/samhaj/">SAMHAJ (Understanding Mental Health)</a></td>
-                        <td>Advocacy, Education, Health</td>
-                        <td>South Asian</td>
-                        <td>NJ</td>
-                        <td><a href="mailto: samhaj@naminj.org">samhaj@naminj.org</a></td>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
                       </tr>
                       <tr>
                         <th scope="row">3</th>
-                        <td><a href="http://jerseypromise.org/">Jersey Promise</a></td>
-                        <td>Advocacy, Education, Policy</td>
-                        <td>General</td>
-                        <td>NJ</td>
-                        <td><a href="mailto: junchoinj@gmail.com">junchoinj@gmail.com</a></td>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>@twitter</td>
                       </tr>
                       <tr>
                         <th scope="row">1</th>
@@ -209,7 +201,6 @@
             <p class="pt-4 text-light">Copyright <span>Sincerely World</span> 2021</p>
           </div>
 
-          <!--
           <div class="col-md-5 p-0">
             <h4 class="text-light">subscribe to our newsletter</h4>
             <form class="form-inline">
@@ -226,7 +217,7 @@
 
             </form>
           </div>
-        -->
+
 
         </div>
       </div>
