--- a/src/login.html
+++ b/src/login.html
@@ -33,7 +33,7 @@ crossorigin="anonymous">
                       <a class="nav-link active" aria-current="page" href="../src/about.html">about</a>
                       <a class="nav-link" href="../src/blog.html">blog</a>
                       <a class="nav-link" href="../src/resources.html">resources</a>
-                      <a class="nav-link" href="../src/donate.html">donate</a>
+                      <a class="nav-link" href="../src/feedback.html">feedback</a>
                       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">name</a>
                       <a class="nav-link" href="../src/login.html">login/register</a>
                     </div>
