--- a/src/feedback.html
+++ b/src/feedback.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sincerely</title>
+    <title>AAPI Resource Initiative</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -18,19 +18,19 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="../src/index.html">sincerely</a>
+                  <a class="navbar-brand" href="../src/index.html">AAPI Resource Initiative</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       
                     <div class="navbar-nav ms-auto">
-                      <a class="nav-link active" aria-current="page" href="../src/about.html">about</a>
-                      <a class="nav-link" href="../src/blog.html">blog</a>
+                      <!--<a class="nav-link active" aria-current="page" href="../src/about.html">about</a>
+                      <a class="nav-link" href="../src/blog.html">blog</a>-->
                       <a class="nav-link" href="../src/resources.html">resources</a>
                       <a class="nav-link" href="../src/feedback.html">feedback</a>
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">name</a>
-                      <a class="nav-link" href="../src/login.html">login/register</a>
+                      <!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">name</a>
+                      <a class="nav-link" href="../src/login.html">login/register</a>-->
                     </div>
                   </div>
                 </div>
@@ -54,12 +54,10 @@
       <div class="container-fluid">
         <div class="row text-left">
           <div class="col-md-5 p-0">
-            <h4 class="text-light">about us</h4>
-            <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, maiores.</p>
             <p class="pt-4 text-light">Copyright <span>Sincerely World</span> 2021</p>
           </div>
 
-          <div class="col-md-5 p-0">
+          <!--<div class="col-md-5 p-0">
             <h4 class="text-light">subscribe to our newsletter</h4>
             <form class="form-inline">
               <div class="col pl-0">
@@ -74,7 +72,7 @@
               </div>
 
             </form>
-          </div>
+          </div>-->
 
 
         </div>
